Большая переработка туториала

--- a/docs/1. Начало/1. Приветствие.md
+++ b/docs/1. Начало/1. Приветствие.md
@@ -7,7 +7,7 @@ title: Приветствие
 
 ![](../../static/img/дикарка.jpg)
 
-**Миру нужны герои. Ты - избранный! И пророчество гласит, что ты САМЫЙ ВАЖНЫЙ, самый талантливый, интересный и необыкновенный человек во вселенной.**
+**Миру нужны герои... Ты - избранный! И пророчество гласит, что ты  САМЫЙ ВАЖНЫЙ, самый талантливый, интересный и необыкновенный человек во вселенной.**
 
 *Это ты, верно?*
 
@@ -15,6 +15,6 @@ title: Приветствие
 
 *Но прежде тебе предстоит пройти обучение…​*
 
-Чтобы полностью раскрыть твой потенциал, мы воспользуется примитивным человеческим изобретением - эмулятором героической жизни, называемым "РПГ Органайзер". Ты создашь героя, выберешь свой путь и будешь сражаться. Каждая новая победа сделает тебя сильнее, увереннее и откроет доступ к новым испытаниям.
+Чтобы полностью раскрыть твой потенциал, мы воспользуется примитивным человеческим изобретением - эмулятором героической жизни, называемым   "РПГ Органайзер". Ты создашь героя, выберешь свой путь и будешь сражаться. Каждая новая победа сделает тебя сильнее, увереннее и откроет доступ к новым испытаниям.
 
 *Готов к приключениям?*
