--- a/docs/1. Начало/2. РПГ Органайзер.md
+++ b/docs/1. Начало/2. РПГ Органайзер.md
@@ -7,6 +7,6 @@ title: РПГ Органайзер
 
 [РПГ Органайзер](http://nerdistway.blogspot.com/2013/07/mylife-rpg-organizer.html) - это новейшая платформа, которая делает саморазвитие простым и веселым.
 
-Совершенствуй все стороны жизни в игровой манере с помощью РПГ Органайзера. Независимо от текущего состояния дел, с помощью инновационной системы постепенной прогрессии (*которую можешь встретить в любимых РПГ играх*) у тебя будут хорошие шансы начать выглядеть и чувствовать себя намного лучше всего за несколько недель.
+Совершенствуй все стороны своей жизни в игровой манере с помощью РПГ Органайзера. Независимо от текущего состояния дел, с помощью инновационной системы постепенной прогрессии (*которую можешь встретить в любимых РПГ играх*) у тебя будут хорошие шансы выглядеть и чувствовать себя намного лучше всего за несколько недель.
 
-С РПГ Органайзером у тебя всегда будет новый вызов и награда, ожидающая тебя. Отслеживай ежедневные миссии, зарабатывай очки опыта и продвигайся выше в турнирной таблице. Стань ЛЕГЕНДАРНЫМ ГЕРОЕМ, прокачай себя в реале и твое имя будет увековечено в [Зале Славы](http://nerdistway.blogspot.com/2013/05/blog-post_91.html)
+С РПГ Органайзером у тебя всегда будет новый вызов и награда, ожидающая тебя. Отслеживай ежедневные миссии, зарабатывай очки опыта и продвигайся выше в турнирной таблице. Стань ЛЕГЕНДАРНЫМ ГЕРОЕМ, прокачай себя в реале и твое имя будет увековечено в [Зале Славы](http://nerdistway.blogspot.com/2013/05/blog-post_91.html)!
