--- a/docs/1. Начало/3. Получение и настройка.md
+++ b/docs/1. Начало/3. Получение и настройка.md
@@ -3,9 +3,15 @@ slug: /getting-rpg-organizer
 title: Получение и настройка
 ---
 
-![Картинки по запросу "гном кузнец"](../../static/img/gnome_draft.jpg)
+![](../../static/img/gnome_draft.jpg)
 
-Чтобы попасть во вселенную РПГ Органайзера - [перейди по секретной ссылке](https://rpgorganizer-72d0b.firebaseapp.com/). 
+## Если у тебя устройство на Android...
+
+Просто скачай готовый apk-установщик по [этой ссылке](https://drive.google.com/file/d/1BUyBA1qvrd_jLdfq0jZMGbRtEn7iYFnU/view?usp=sharing). В Play Market пока нету)))
+
+## Веб версия
+
+Если планируешь пользоваться с Десктопа, или у тебя Айфон - [перейди по секретной ссылке](https://rpgorganizer-72d0b.firebaseapp.com/), чтобы попасть во вселенную РПГ Органайзера. 
 
 :::danger &nbsp;
 
@@ -13,6 +19,15 @@ title: Получение и настройка
 
 :::
 
+При запуске странички на телефоне тебе будет предложено "**добавить РПГ Органайзер на главный экран**". Соглашайся, так будет намного удобнее пользоваться (*альтернативный способ - нажми Меню→Домашний экран*).
+
+![](../../static/img/добавитьПриложениеАндроид.jpg)
+
+После этих действий "РПГ Органайзер" преобразуется в полноценное приложение! Чтобы открыть его - запусти из своего списка установленных программ.
+
+P.S. На дектопе ты также можешь преобразовать страничку органайзера в приложение!
+
+## Залогинься
 Войди, используя Гугл аккаунт.
 
 ![](../../static/img/логин.jpg)
@@ -20,19 +35,3 @@ title: Получение и настройка
 Если все нормально, попадешь на главный экран:
 
 ![](../../static/img/ГлавноеОкно.jpg)
-
-## Настройка
-
-При запуске странички на телефоне тебе будет предложено "**добавить РПГ Органайзер на главный экран**". Соглашайся, так будет намного удобнее пользоваться (*альтернативный способ - нажми Меню→Домашний экран*).
-
-![](../../static/img/добавитьПриложениеАндроид.jpg)
-
-После этих действий "РПГ Органайзер" преобразуется в полноценное приложение! Чтобы открыть его - запусти из своего списка установленных программ.
-
-:::info &nbsp;
-
-Не хочешь заморачиваться с настройками? Просто скачай готовый apk-установщик, если у тебя устройство на Android.
-
-Установщик доступен для скачивания по [этой ссылке](https://drive.google.com/file/d/1BUyBA1qvrd_jLdfq0jZMGbRtEn7iYFnU/view?usp=sharing).
-
-:::
