--- a/docs/2. Основные понятия/4. Навыки.md
+++ b/docs/2. Основные понятия/4. Навыки.md
@@ -9,7 +9,9 @@ title: Навыки
 
 В реале у нас тоже есть навыки, от которых зависит наша крутость: сопротивление фастфуду, ежедневное чтение, зарядка, программирование - вот примеры навыков реальной жизни. Главная цель РПГ Органайзера - сделать сложный и нудный процесс формирования полезных навыков увлекательным.
 
+:::info &nbsp;
 **Навыки - это более конкретная и специфичная мера твоего развития, чем характеристики.**
+:::
 
 ## Что мы имеем ввиду под навыками?
 
@@ -17,7 +19,11 @@ title: Навыки
 >
 > —  Википедия
 
-В самом простейшем объяснении под навыком мы будем принимать привычку. Хочешь изучить программирование? Если будешь кодить каждый день понемногу - будешь прокачивать навык. Забросишь - навык будет понижаться. Также и с "йогой", "английским", "боксом" и "бодибилдингом".
+В самом простейшем виде под навыком мы будем принимать привычку:
+
+- **Хочешь изучить программирование?** Если будешь кОдить каждый день понемногу - будешь прокачивать навык. Забросишь - навык будет деградировать. 
+- **Освоить английский?** Просто читай на иностранном понемногу каждый день.
+- **Йога?** Приобрети привычку заниматься на постоянной основе и все будет тип-топ!
 
 :::info &nbsp;
 
@@ -27,7 +33,7 @@ title: Навыки
 
 ## Навыки влияют на характеристики
 
-Какое у тебя сейчас здоровье и как ты выглядишь на 95% следствие твоих хороших или плохих привычек. Если ты пьешь, куришь и ругаешься матом, то у тебя проблемы с характеристиками – **ЗДОРОВЬЕ** и **ХАРИЗМА**. Если развиваешь навык игры на гитаре, то улучшаешь **ОБАЯНИЕ**. Изучаешь программирование – **ИНТЕЛЛЕКТ**, рисование – **МЫШЛЕНИЕ**. То есть навыки развивают характеристики (*а характеристики - наше все)*)). Поэтому В РПГ Органайзере каждый навык связан с той или иной характеристикой, а развивать характеристики можно только прокачивая навыки.
+Какое у тебя здоровье и как ты выглядишь на 99% следствие твоих хороших или плохих привычек. Если ты пьешь, куришь и ругаешься матом, то у тебя проблемы с характеристиками – **ЗДОРОВЬЕ** и **ХАРИЗМА**. Тренируясь играть на гитаре на гитаре, улучшаешь **ОБАЯНИЕ**. Читая умные книги– **ИНТЕЛЛЕКТ**, рисуя – **МЫШЛЕНИЕ**. То есть навыки развивают характеристики (*что в конечном счете делает тебя круче*). Поэтому В РПГ Органайзере каждый навык связан с той или иной характеристикой, а развивать характеристики можно только прокачивая навыки.
 
 Примеры навыков и характеристик, которые они прокачивают:
 
