--- a/docs/2. Основные понятия/6. Квесты.md
+++ b/docs/2. Основные понятия/6. Квесты.md
@@ -5,7 +5,7 @@ title: Квесты
 
 ![](../../static/img/квесты.jpg)
 
-Еще одна полезная штука из РПГ игр, которая может пригодиться - квесты.
+Еще одна прикольная штука из РПГ игр, которая может пригодиться - квесты.
 
 Квест это обособленная цель, поставленная перед персонажами игроков в ходе развития игрового сюжета. Её выполнение является источником удовольствия от игры, порой принося персонажам материальные и нематериальные блага, или просто предоставляя возможность интересно и увлекательно провести время.
 
