--- a/docs/3. Туториал/1. Тренировочный перс.md
+++ b/docs/3. Туториал/1. Тренировочный перс.md
@@ -5,10 +5,11 @@ title: Тренировочный перс
 
 ![035](../../static/img/тренировочный_перс)
 
-При первом запуске у тебя будет полностью настроенный "тренировочный" персонаж, но в будущем мы сделаем своего)))
+*Ты на экране персонажа...*
 
-Ты всегда можешь загрузить "тренировочного персонажа", нажав эту кнопку на экране перса (в режиме редактирования):
+При первом запуске у тебя есть возможность загрузить тренировочного перса  чтобы пройти небольшой туториал и посмотреть, как тут все устроено (*и пройти этот туториал*). Сделай это:
 
-![](../../static/img/загрузка_тренировочного_перса)
-
-Сейчас мы пройдем небольшой туториал, где ты опробуешь основные функции и решишь - действительно ли готов к [прокачке в реале](http://nerdistway.blogspot.com/2013/08/blog-post_5490.html)?!
+1. На экране персонажа (*ты на нем находишься?*) активируй режим редактирования:
+  ![](../../static/img/persWindow)
+1. Нажми эту кнопку:
+  ![](../../static/img/загрузка_тренировочного_перса)
