--- a/docs/3. Туториал/3. Файт.md
+++ b/docs/3. Туториал/3. Файт.md
@@ -5,13 +5,9 @@ title: ФАЙТ!!!
 
 ![](../../static/img/файт)
 
-В главном окне появилось первое задание из списка заданий.
+В главном окне появилось первое задание. Каждое задание - это [монстр](/about-monsters), которого нужно победить. С ростом уровня твоего перса задания будут усложняться, монстры крутеть. Даже их изображения будут меняться на более продвинутых противников, так что не стой на месте! Впереди еще много интересного!
 
 ![](../../static/img/первое_задание_из_списка_заданий)
-
-:::info &nbsp;
-Каждое задание - это [монстр](/about-monsters), которого нужно победить. С ростом уровня твоего перса задания будут усложняться, монстры крутеть. Даже их изображения будут меняться на более продвинутых противников, так что не стой на месте! Впереди еще много интересного!
-:::
 
 Все задания условно можно разделить на:
 
@@ -28,15 +24,17 @@ title: ФАЙТ!!!
 
 ![](../../static/img/дела_списком)
 
-Чтобы отметить выполнение задачи (*сначала нужно сделать ее в реале*), жми на иконку "меч" (или свайп снизу вверх):
+Чтобы продвигаться вперед и твой персонаж крутел - тебе нужно выполнять задания в реале. Выбери задачу в РПГ органайзере, сделай ее и отметь в программе ее успешное выполнение. Чтобы отметить выполнение задачи (*сначала нужно сделать ее в реале*), жми на иконку "меч" (*или свайп снизу вверх*):
 
 ![image-20210317091255062](../../static/img/выполнить_задачу)
 
-Если задача является привычкой, также доступен пропуск задачи. Жми "щит" (*или свайп сверху вниз*):
+Ты получишь награду в виде очков опыта, а может быть и еще что-то)) [Ты и твой виртуальный аватар будете развиваться](http://nerdistway.blogspot.com/2013/08/blog-post_5490.html) - иначе зачем мы тут?
+
+Если задача является привычкой, также доступен пропуск задачи. Жми "щит", если не готов сегодня к выполнению этого дела (*или свайп сверху вниз*):
 
 ![](../../static/img/пропуск_задачи)
 
-При выполнении/пропуске задач ты будешь получать очки опыта, продвигаться в квестах, получать награды... [Ты и твой виртуальный аватар будете развиваться](http://nerdistway.blogspot.com/2013/08/blog-post_5490.html) - иначе зачем мы тут?
+При пропуске задач ты будешь получать штраф. Пожалуйста, постарайся выполнять все запланированные дела))
 
 ## Сортировка задач
 
@@ -66,7 +64,7 @@ title: ФАЙТ!!!
 
 Как видишь, способов много... Сделай это!
 
-Получилось? Теперь все задачи будут отсортированы как надо.
+Получилось? Теперь каждая задача на своем месте!
 
 ![](../../static/img/задачи_отсортированы)
 
@@ -86,7 +84,7 @@ title: ФАЙТ!!!
 
 ## Файт!!!
 
-А теперь давай уже приступим!
+### Выполни задачу квеста
 
 Кстати, поздравляю! Ты уже выполнил самую первую задачу из тренировочного квеста "РПГ Органайзер"! Перейди в режим задач квестов (*если ты не там*):
 
@@ -99,6 +97,8 @@ title: ФАЙТ!!!
 А теперь отметь выполнение первой задачи (*ты ведь уже распределил очки навыков, правда?*). Нажми "меч" или свайпни снизу вверх:
 
 ![](../../static/img/выполнить_первую_задачу_квеста)
+
+### Выполни задачу навыков
 
 Ура! Теперь прочитай следующее задание:
 
@@ -115,6 +115,8 @@ title: ФАЙТ!!!
 ![](../../static/img/выполни_навык)
 
 Как то так)))
+
+### Выполни первый квест
 
 И последнее задание туториала - тебе нужно достичь первого уровня. Для этого нужно выполнить все задачи навыков за сегодняшний день. Сделай это! Я в тебя верю)))
 
