--- a/docs/3. Туториал/4. Следующий уровень.md
+++ b/docs/3. Туториал/4. Следующий уровень.md
@@ -5,12 +5,14 @@ title: Следующий уровень
 
 ![](../../static/img/level_up)
 
-После того, как ты достигнешь следующего уровня, откроется лист персонажа. Ты получишь еще немного очков прокачки, которые тебе снова нужно будет распределить. Появятся новые задания, или усложнятся предыдущие. [Просто всегда двигайся вперед!](https://nerdistway.blogspot.com/2014/10/blog-post.html)
-
-[Так, уровень за уровнем, ступенька за ступенькой ты станешь тем, кем мечтал.](https://nerdistway.blogspot.com/2017/05/blog-post_1.html)
+После того, как ты достигнешь следующего уровня, откроется лист персонажа. Ты получишь еще немного очков прокачки, которые тебе снова нужно будет распределить. Появятся новые задания, или усложнятся предыдущие. [Просто всегда двигайся вперед!](https://nerdistway.blogspot.com/2014/10/blog-post.html) [Так, уровень за уровнем, ступенька за ступенькой ты станешь тем, кем мечтал.](https://nerdistway.blogspot.com/2017/05/blog-post_1.html)
 
 Максимальный уровень в РПГ Органайзере у каждого свой в зависимости от общего числа навыков и перков. На максимальном уровне все твои таланты (*характеристики, навыки, перки*) прокачаются до конца, а твоя жизнь примет вид, о котором ты мечтал. Когда полностью прокачаешься - обязательно расскажи мне)) Я буду тобой гордиться и впишу твое имя в "[Зал Славы](https://nerdistway.blogspot.com/2013/05/blog-post_91.html)"))
 
 Кстати, у нас еще есть группа в [телеграмме](https://t.me/rpgorganizerchat). Пиши туда, если будут вопросы.
 
+:::warning &nbsp;
+
 А вообще, шутки кончились. Когда наиграешься с тренировочным персом - давай создадим своего!
+
+:::
