--- a/docs/4. Создание персонажа/1. Настройка перса.md
+++ b/docs/4. Создание персонажа/1. Настройка перса.md
@@ -5,9 +5,9 @@ title: Настройка перса
 
 Готовься, дорогой УБИЙЦА ДРАКОНОВ, сейчас мы будем переносить твои цели в модель РПГ игры! Это уже - высший пилотаж!
 
-Я уверен, что ты итак прекрасно знаешь, что тебе делать для того, чтобы стать мега крутым парнем/девченкой. Но если хочешь совета - добро пожаловать в мой блог) И напоминаю - если будут вопросы - смело задавай их в [телеграмме](https://t.me/rpgorganizerchat).
+Я уверен, что ты итак прекрасно знаешь, что тебе делать для того, чтобы стать мега крутым парнем/девченкой. Но если хочешь совета - [добро пожаловать в мой блог](http://nerdistway.blogspot.com/)))) И напоминаю - если будут вопросы - смело задавай их в [телеграмме](https://t.me/rpgorganizerchat).
 
-Ладно, создаем [персонажа](/about-pers)... На главной странице кликни по картинке перса:
+Ладно, создаем [персонажа](/about-pers)... Для начала нужно очистить все данные. Перейди на экран персонажа - на главной странице кликни по картинке перса:
 
 ![](../../static/img/openPersWindow)
 
@@ -19,11 +19,15 @@ title: Настройка перса
 
 ![](../../static/img/новая_игра)
 
-Кстати, есть еще кнопка "респаун":
+:::info &nbsp;
+
+Кстати, тут есть еще кнопка "респаун":
 
 ![](../../static/img/кнопка_респаун)
 
-Это на крайний случай, если ты вдруг в какой то момент решишь начать игру сначала, но при этом сохранить все настройки персонажа.
+Это на тот случай, если в какой то момент решишь начать игру сначала, но при этом сохранить своего перса.
+
+:::
 
 Снова **активируй "режим редактирования"**:
 
@@ -43,5 +47,7 @@ title: Настройка перса
 Ничего не подошло? Нажми "Путь из интернета" и вставь туда url изображения.
 
 :::caution &nbsp;
+
 Не забудь сохранить!!! Снова нажми на шестеренку в правом нижнем углу!
+
 :::
