--- a/docs/4. Создание персонажа/2. Характеристики.md
+++ b/docs/4. Создание персонажа/2. Характеристики.md
@@ -5,7 +5,7 @@ title: Характеристики
 
 Делаем крупные мазки в твоем героическом портрете - настраиваем [характеристики](/about-characts)!
 
-Для начала ответь на вопрос - "Чего ты хочешь?". Такие характеристики и добавляй. Хочешь быть умным и сильным - тогда "сила" и "ум". Хорошо себя чувствовать - тогда "выносливость" или "здоровье". Или может быть "уверенность", "мудрость" или "боевой дух"? Ты сам решаешь)))
+Для начала ответь на вопрос - ["Чего ты хочешь?"](http://nerdistway.blogspot.com/2017/05/5.html) Такие характеристики и добавляй. Хочешь быть умным и сильным - тогда "сила" и "ум". Хорошо себя чувствовать - тогда "выносливость" или "здоровье". Или может быть "уверенность", "мудрость" или "боевой дух"? Ты сам решаешь)))
 
 Есть несколько способов добавить характеристики, но я тебе покажу самый простой и наглядный. Начнем [Mind Mapping](https://mel.fm/blog/rafael-tyncherov1/8194-chto-takoye-karty-uma-i-kak-zarisovat-tsely-uchebnik)!
 
@@ -21,4 +21,8 @@ title: Характеристики
 
 ![](../../static/img/ДобавленныеХарактеристики.jpg)
 
+:::caution &nbsp;
+
 Напоминаю - характеристики это основные качества, определяющие твою крутость. Ограничься 5-7 такими параметрами...
+
+:::
