--- a/docs/4. Создание персонажа/3. Навыки.md
+++ b/docs/4. Создание персонажа/3. Навыки.md
@@ -3,9 +3,9 @@ slug: /create-abils
 title: Навыки
 ---
 
-Как я говорил раньше, каждый навык будет "связан" с соответствующей характеристикой. [Навыки](/about-abils) развивают характеристики, а характеристики в основном служат для группировки навыков и более общей статистики твоего прогресса (*чуть позже ты поймешь о чем это я*).
+Каждый навык будет "связан" с соответствующей характеристикой. [Навыки](/about-abils) развивают характеристики, а характеристики в основном служат для группировки навыков и более общей статистики твоего прогресса.
 
-Сейчас посмотри на свою карту персонажа и подумай - как можно развивать добавленные характеристики? Например, силу можно развивать спортом, мышление - ежедневной игрой в шахматы или чтением умных книг, а здоровье - йогой и правильным питанием.
+Сейчас посмотри на свою карту персонажа и подумай - как можно развивать добавленные характеристики? Например, силу можно развивать спортом, мышление - игрой в шахматы или чтением умных книг, а здоровье - йогой и правильным питанием.
 
 Придумал? Тогда нажми на одну из характеристик, затем кнопку "добавить" и впиши название навыка.
 
@@ -15,7 +15,7 @@ title: Навыки
 
 ![image-20210329170954642](../../static/img/ДоавленныеНавыки.jpg)
 
-Я думаю, персонально для себя ты придумаешь что-то намного круче))
+Я думаю, для себя ты придумаешь что-то намного круче))
 
 :::info &nbsp;
 
