--- a/docs/4. Создание персонажа/4. Наводим красоту.md
+++ b/docs/4. Создание персонажа/4. Наводим красоту.md
@@ -29,9 +29,9 @@ title: Наводим красоту
 - **Навыки** - может быть нужно добавить еще навыков?
 - Повтори эти действия с остальными характеристиками...
 
-:::warning &nbsp;
+:::caution &nbsp;
 
-Не забудь сохранить! Нажми эту кнопку, когда все настроишь:
+Не забудь сохранить! Нажми эту кнопку, когда закончишь:
 
 ![](../../static/img/СохранитьИзменения.jpg)
 
@@ -43,6 +43,6 @@ title: Наводим красоту
 
 ![image-20210220164020898](../../static/img/НастройкаНавыка.jpg)
 
-Не забудь сохранить))
+Не забудь сохранить)) Повтори с отсальными...
 
 Там есть еще куча настроек, но об этом чуть позже)))
