--- a/docs/4. Создание персонажа/5. Детальная настройка навыков.md
+++ b/docs/4. Создание персонажа/5. Детальная настройка навыков.md
@@ -3,9 +3,9 @@ slug: /create-abils-settings
 title: Детальная настройка навыков
 ---
 
-Сейчас будет самый нудный (*а для кого то самый интересный*) этап в настройке персонажа РПГ Органайзера. А еще он самый важный. Не ленись пожалуйста!
+Сейчас будет самый нудный (*а для кого то самый интересный*) этап в настройке персонажа РПГ Органайзера. **А еще он самый важный.** Не ленись пожалуйста!
 
-Тебе нужно будет прощелкать по каждому навыку и настроить для него прокачку по уровням. Если ты это сделаешь сейчас, потом тебе не надо будет тратить время и силы на планирование. Ты в курсе, что [мы функционируем в двух режимах](https://nerdistway.blogspot.com/2020/12/blog-post.html)? Это сильно [сбережет твои очки силы воли](https://nerdistway.blogspot.com/2013/12/blog-post_27.html)! К тому же ты будешь видеть свой путь героя.
+Тебе нужно будет пощелкать по каждому навыку и настроить для него прокачку по уровням. Если ты это сделаешь сейчас, потом тебе не надо будет тратить время и силы на планирование. Ты в курсе, что [мы функционируем в двух режимах](https://nerdistway.blogspot.com/2020/12/blog-post.html)? Это сильно [сбережет твои очки силы воли](https://nerdistway.blogspot.com/2013/12/blog-post_27.html)! К тому же ты будешь видеть свой путь героя.
 
 Открой первый навык из списка:
 
@@ -17,7 +17,7 @@ title: Детальная настройка навыков
 
 ## Настройка повторений
 
-Как ты помнишь, навыки развиваются повторяющимися задачами. Настрой это:
+Как ты помнишь, навыки развиваются повторяющимися задачами. Настрой его повторение:
 
 ![image-20210330153827362](../../static/img/настройка_повторений)
 
@@ -32,6 +32,12 @@ title: Детальная настройка навыков
 Если это "Перк":
 
 ![](../../static/img/если_это_перк)
+
+:::info &nbsp;
+
+Ты помнишь, чем перки отличаются от навыков? [Подробности тут](/about-perks)!
+
+:::
 
 ## Прокачка по уровням
 
@@ -76,6 +82,12 @@ title: Детальная настройка навыков
 Автоматическое распределение будет таким:
 
 ![](../../static/img/сопротивление_вредному_готово)
+
+:::info &nbsp;
+
+Используй этот прием, если ты хочешь, чтобы одному навыку одновременно соответствовало несколько задач!!!
+
+:::
 
 ### Задания будут чередоваться
 
