--- a/docs/4. Создание персонажа/6. Квесты.md
+++ b/docs/4. Создание персонажа/6. Квесты.md
@@ -3,7 +3,7 @@ slug: /create-qwests
 title: Квесты
 ---
 
-[Квесты](/about-qwests) - тоже важная штука в РПГ Органайзере. Они помогают тебе достигать целей (не забывай про [условия создания хорошего квеста](https://nerdistway.blogspot.com/2013/08/blog-post.html)).
+[Квесты](/about-qwests) - тоже важная штука в РПГ Органайзере. Они помогают тебе достигать целей и завершать крупные проекты (не забывай про [условия создания хорошего квеста](https://nerdistway.blogspot.com/2013/08/blog-post.html)).
 
 Чтобы настроить новый квест - перейди на вкладку:
 
@@ -54,7 +54,6 @@ title: Квесты
 ![](../../static/img/двигать_перетаскиванием)
 
 ## Награда за квест
-
 
 Как я уже говорил, у каждого квеста [должна быть причина, и должен быть результат](https://nerdistway.blogspot.com/2013/08/blog-post.html). Награда создаст мотивацию к следующим свершениям и даст лучше почувствовать "вкус победы" - ощущение, очень важное для скромных ботанов.
 
