--- a/docs/4. Создание персонажа/7. Трофеи.md
+++ b/docs/4. Создание персонажа/7. Трофеи.md
@@ -55,3 +55,5 @@ title: Трофеи
 На этом создание персонажа завершено. Но помни, что это непрерывный процесс. Ты все равно будешь периодически менять характеристики/навыки, донастраивать задачи, добавлять квесты/награды.
 
 Но вообще, ты молодец! Я тобой горжусь!)))
+
+Какие следующие действия? Прокачивай навыки, выполняй задачи, завершай квесты! Все как в [туториале с тренировочным персом!](/tutor-pers)
