--- a/docs/5. Продвинутые фишки/1. Сохранение перса.md
+++ b/docs/5. Продвинутые фишки/1. Сохранение перса.md
@@ -3,13 +3,13 @@ slug: /advanced-save
 title: Сохранение перса
 ---
 
-:::info &nbsp;
+:::warning &nbsp;
 
 Обрати внимание! По умолчанию вся информация о персонаже хранится на твоем устройстве!
 
 :::
 
-Во-первых, так твои данные будут в большей безопасности, в какой-то степени. А во-вторых, так будет меньше нагрузки на сервер и у нас потенциально может быть больше пользователей!))
+Все твои данные хранятся на твоем устройстве. Почему? Во-первых, так твои данные будут в большей безопасности, в какой-то степени. А во-вторых, так будет меньше нагрузки на сервер и у нас потенциально может быть больше пользователей!))
 
 Но я тебе все таки настоятельно рекомендую периодически сохраняться. Чтобы это сделать, на экране персонажа нажми сюда:
 
@@ -18,6 +18,8 @@ title: Сохранение перса
 Если тебе когда-то нужно будет загрузить данные из сервера, жми сюда:
 
 ![](../../static/img/скачать_с_сервера)
+
+Если ты планируешь пользоваться прогой на нескольких устройствах - тогда загруззалей на сервер данные с устройства, где ты пользовался прогой в последний раз, а потом - загрузи с сервера данные на втором устройстве (*немного муторно, но я лично я, например, просто обычно пользуюсь с телефона...*). 
 
 :::warning &nbsp;
 
