--- a/docs/6. Эпилог/1. Напутствие.md
+++ b/docs/6. Эпилог/1. Напутствие.md
@@ -5,13 +5,9 @@ title: Напутствие
 
 ![](../../static/img/старый_обиван)
 
-Ну вот собственно и все, начинающий Искатель Приключений! Я рассказал тебе все, что знал об [РПГ Органайзере](https://nerdistway.blogspot.com/2013/07/mylife-rpg-organizer.html).
+Ну вот собственно и все, начинающий Искатель Приключений! Я рассказал тебе все, что знал об [РПГ Органайзере](https://nerdistway.blogspot.com/2013/07/mylife-rpg-organizer.html). Надеюсь, он поможет тебе стать лучшей версией себя!
 
-Надеюсь, он поможет тебе стать лучше и достичь тех целей о которых ты мечтал!
-
-*Я немного задолбался, разрабатывая эту программу и особенно - писав эту инструкцию. Так что не подкачай!*
-
-Если у тебя возникнут вопросы, буду рад на них ответить:
+Если у тебя возникнут вопросы, буду рад ответить на них тут:
 
 - [Блог](https://nerdistway.blogspot.com/)
 - [Группа ВК](https://vk.com/liferpgorganizer)
