--- a/docs/2. Основные понятия/1. Игрофикация.md
+++ b/docs/2. Основные понятия/1. Игрофикация.md
@@ -3,10 +3,10 @@ slug: /about-igrofication
 title: Игрофикация
 ---
 
-![Картинки по запросу "игрофикация"](../../static/img/Игрофикация.jpg)
+![](../../static/img/Игрофикация.jpg)
+
+Давай для начала договоримся об основных терминах, которые используются в РПГ Органайзере? Начнем с понятия "**игрофикация**".
 
 Главная фишка РПГ Органайзера - игрофикация.Такая штука, чтобы сделать твою личную прокачку интересным занятием.
 
-Тебе знакомы всякие скучные менеджеры задач, списки дел, системы развития? Если они работают для тебя - прекрасно! А если нет - тут мы попробуем распланировать твое развитие и твои цели в виде РПГ игры.
-
-У тебя будет персонаж, который олицетворяет тебя. Развивая перса, ты будешь развиваться сам. Будут характеристики, навыки, квесты, награды, очки опыта и всякие другие штуки, которые так нравятся нам в играх! И будет ПУТЬ ГЕРОЯ, который поможет тебе развиваться постепенно и не саботировать эти изменения. Не лениться, короче)
+Тебе знакомы всякие скучные менеджеры задач, списки дел, системы развития? Если они работают для тебя - прекрасно! А если нет - мы попробуем распланировать твое развитие и цели в виде РПГ игры. У тебя будет персонаж, который олицетворяет тебя. Развивая перса, ты будешь развиваться сам. Будут характеристики, навыки, квесты, награды, очки опыта и всякие другие штуки, которые так нравятся нам в играх! И будет ПУТЬ ГЕРОЯ, который поможет тебе развиваться постепенно и не саботировать эти изменения. Не лениться, короче)
