--- a/docs/2. Основные понятия/12. Зачем.md
+++ b/docs/2. Основные понятия/12. Зачем.md
@@ -7,9 +7,7 @@ title: 'Зачем все это нужно?'
 
 Все эти штуки нужны, чтобы ты мог спланировать ПУТЬ ГЕРОЯ. Четко увидеть, каким ты хочешь быть, какие шаги для этого нужны.
 
-Представь себя художником, рисующем твой будущий портрет...
-
-Сначала - история и имя героя. Потом, крупными мазками добавляем характеристики. Затем, маленькими штришками вырисовываем навыки. И в конце добавляем деталей в виде квестов и наград.
+Представь себя художником, рисующем твой будущий портрет...Сначала - история и имя героя. Потом, крупными мазками добавляем характеристики. Затем, маленькими штришками вырисовываем навыки. И в конце добавляем деталей в виде квестов и наград.
 
 И вот ты уже четко перенес в реальный мир в виде плана к действию то, каким ты хочешь быть и ты можешь видеть это и ясно представлять все нюансы.
 
