--- a/docs/2. Основные понятия/5. Перки.md
+++ b/docs/2. Основные понятия/5. Перки.md
@@ -7,4 +7,10 @@ title: Перки
 
 Перки (*особенности*) - это твои преимущества, некая особенная черта, элемент личности, отличительная особенность игрового персонажа.  Вообще - это очень распространенное понятие в РПГ играх, наибольшую известность они получили в игре [Fallaut](https://fallout.fandom.com/ru/wiki/Fallout_2).
 
-В РПГ Органайзере под перками мы будем также принимать твои привычки, как и навыки, только они не имеют градацию по уровням. Они либо есть, либо нет. Вроде "сопротивления алкоголю" или "вождения автомобиля". Тут тебе надо проявить немного фантазии - ты сам решаешь, какие качества будут навыками, а какие - перками.
+В РПГ Органайзере под перками мы будем также принимать твои привычки, как и навыки, только они не имеют градацию по уровням. Они либо есть, либо нет. Вроде "сопротивления алкоголю" или "вождения автомобиля". 
+
+:::info &nbsp;
+
+Тут тебе надо проявить немного фантазии - ты сам решаешь, какие качества будут навыками, а какие - перками.
+
+:::
